2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (main): Doh, change the gconf key in the code too.

2003-06-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.schemas.in: Change the schema to be consistent and
	legal. 

	* Makefile.am (install-data-local): Remove bash specific shell
	code (for FreeBSD).

2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.h: 
	* gnome-canvas-pimage.c: Converted to pixbufs.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.c: 
	* solubility.c: 
	* mahjongg.c: Fixed compiler warnings.
	(load_tiles): Use g_build_filename to construct paths.

2003-06-13  William Jon McCann  <mccann@jhu.edu>

	* mahjongg.c (properties_callback): Changed preferences dialog
	to 2x2 layout instead of 1x4.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Removed all the "are you sure" questions as well as
	the associated gconf key.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: i18n fixes from Christian Neumair (bug #114875).

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* mahjongg.c (properties_callback): Converted bold_frame
	to GamesFrame.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* mahjongg.c: Removed separator from dialogs as in HIG.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: UI consistency (see bug #114447).

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-29  Callum McKenzie  <callum@physics.otago.ac.nz>
